; ModuleID = '/home/carl/AnghaBench/FFmpeg/doc/examples/extr_avio_reading.c_read_packet.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/doc/examples/extr_avio_reading.c_read_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_data = type { i32, i32 }

@AVERROR_EOF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"ptr:%p size:%zu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32)* @read_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_packet(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.buffer_data*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.buffer_data*
  store %struct.buffer_data* %10, %struct.buffer_data** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.buffer_data*, %struct.buffer_data** %8, align 8
  %13 = getelementptr inbounds %struct.buffer_data, %struct.buffer_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @FFMIN(i32 %11, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %3
  %19 = load i32, i32* @AVERROR_EOF, align 4
  store i32 %19, i32* %4, align 4
  br label %45

20:                                               ; preds = %3
  %21 = load %struct.buffer_data*, %struct.buffer_data** %8, align 8
  %22 = getelementptr inbounds %struct.buffer_data, %struct.buffer_data* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.buffer_data*, %struct.buffer_data** %8, align 8
  %25 = getelementptr inbounds %struct.buffer_data, %struct.buffer_data* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %23, i32 %26)
  %28 = load i32*, i32** %6, align 8
  %29 = load %struct.buffer_data*, %struct.buffer_data** %8, align 8
  %30 = getelementptr inbounds %struct.buffer_data, %struct.buffer_data* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @memcpy(i32* %28, i32 %31, i32 %32)
  %34 = load i32, i32* %7, align 4
  %35 = load %struct.buffer_data*, %struct.buffer_data** %8, align 8
  %36 = getelementptr inbounds %struct.buffer_data, %struct.buffer_data* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = add nsw i32 %37, %34
  store i32 %38, i32* %36, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load %struct.buffer_data*, %struct.buffer_data** %8, align 8
  %41 = getelementptr inbounds %struct.buffer_data, %struct.buffer_data* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = sub nsw i32 %42, %39
  store i32 %43, i32* %41, align 4
  %44 = load i32, i32* %7, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %20, %18
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i32 @printf(i8*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
